<resources>
    <string name="app_name">MyCoupangEats</string>
    <string name="sign_up_str">회원가입</string>
    <string name="input_user_info_str">회원정보를 입력해주세요</string>
    <string name="sign_up_terms_title_all_str">모두 확인하였으며 동의합니다.</string>
    <string name="sign_up_terms_title_detail_all_str">전체 동의에는 필수 및 선택 정보에 대한 동의가 포함되어 있으며, 개별적으로 동의를 선택 하실 수 있습니다. 선택항목에 대한 동의를 거부하시는 경우에도 서비스 이용이 가능합니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="coupang_right">ⓒCoupang Corp. All rights reserved.</string>
    <string name="login_dailog_sub_str">지금 로그인하고 \n<b>무료배달과 기간 한정 쿠폰</b>  혜택놓치지 마세요.</string>
    <string name="login_pw_str">비밀번호</string>
    <string name="login_lg_str">로그인</string>
    <string name="login_search_id_str">아이디 찾기</string>
    <string name="login_search_pw_str">비밀번호 찾기</string>
    <string name="login_sign_up_str">회원가입</string>
    <string name="img_descrip_cp_logo_str">로그인 쿠팡로고</string>

    <string name="sign_up_email_error_str">이메일을 입력하세요.</string>
    <string name="sign_up_pw_error_str">X 영문/숫자/특수문자 2가지 이상 조합(8~20자)\nX 3개이상 연속되거나 동일한 문자/숫자 제외 \nX 아이디(이메일)제외</string>
    <string name="sign_up_name_error_str">이름을 정확히 입력하세요.</string>
    <string name="sign_up_pn_error_str">휴대폰 번호를 정확하게 입력하세요.</string>
    <string name="sign_up_hint_email_str">아이디(이메일)</string>
    <string name="sign_up_hint_pass_str">비밀번호</string>
    <string name="sign_up_hint_name_str">이름</string>
    <string name="sign_up_hint_pn_str">휴대폰번호</string>
    <string name="login_cp_email_hint_str">쿠팡 아이디(이메일) 입력</string>
    <string name="login_cp_pw_hint_str">비밀번호 입력</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>