<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.gram15inch.presentation.viewmodel.LoginViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_toolbar"
            tools:context=".presentation.ui.LoginActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/login_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/login_logo_img"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:src="@drawable/lg_logo"
                android:contentDescription="@string/img_descrip_cp_logo_str"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_toolbar" />

            <com.gram15inch.presentation.base.view.LoginEditText
                android:id="@+id/login_id_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:label="이메일"
                app:hintText="@string/login_cp_email_hint_str"
                app:endIconType="clear"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_logo_img" >

            </com.gram15inch.presentation.base.view.LoginEditText>

            <com.gram15inch.presentation.base.view.LoginEditText
                android:id="@+id/login_pw_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/login_pw_str"
                app:hintText="@string/login_cp_pw_hint_str"
                android:layout_marginTop="7dp"
                app:endIconType="password"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_id_txt" >
            </com.gram15inch.presentation.base.view.LoginEditText>

            <Button
                android:id="@+id/login_enter_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_enter_btn_height"
                android:layout_marginTop="10dp"
                android:text="@string/login_lg_str"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_pw_txt" />

            <TextView
                android:id="@+id/login_search_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/login_search_id_str"
                app:layout_constraintEnd_toStartOf="@+id/login_search_pw_txt"
                app:layout_constraintStart_toStartOf="@id/login_enter_btn"
                app:layout_constraintTop_toBottomOf="@+id/login_enter_btn" />

            <TextView
                android:id="@+id/login_id_txt_hor_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="|"
                android:textColor="@color/grey919FAC"
                app:layout_constraintBottom_toBottomOf="@+id/login_search_id_txt"
                app:layout_constraintStart_toEndOf="@id/login_search_id_txt"
                app:layout_constraintTop_toTopOf="@+id/login_search_id_txt" />


            <TextView
                android:id="@+id/login_search_pw_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/login_search_pw_str"
                app:layout_constraintEnd_toEndOf="@+id/login_enter_btn"
                app:layout_constraintStart_toStartOf="@+id/login_enter_btn"
                app:layout_constraintTop_toTopOf="@id/login_search_id_txt" />

            <TextView
                android:id="@+id/login_pw_txt_hor_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="@color/grey919FAC"
                app:layout_constraintBottom_toBottomOf="@+id/login_search_id_txt"
                app:layout_constraintStart_toEndOf="@id/login_search_pw_txt"
                app:layout_constraintTop_toTopOf="@+id/login_search_id_txt" />


            <TextView
                android:id="@+id/login_sign_up_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/login_sign_up_str"
                android:textColor="@color/dark_blue"
                app:layout_constraintStart_toEndOf="@+id/login_pw_txt_hor_div"
                app:layout_constraintTop_toTopOf="@id/login_search_id_txt" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
